fix bugs and improve test values