@@ -2,6 +2,9 @@ package com.ekimenko.spring.rest.SpringRESTtestingsystem.rest.answer_rest;
 
 import com.ekimenko.spring.rest.SpringRESTtestingsystem.dto.answer_dto.AnswerResultDto;
 import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.answer.AnswerResult;
+import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.answer.AnswerVariant;
+import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.question.Question;
+import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.test.TestResult;
 import com.ekimenko.spring.rest.SpringRESTtestingsystem.service.answer_service.AnswerResultService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -22,14 +25,12 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.Mockito.when;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.documentationConfiguration;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.*;
-import static org.springframework.restdocs.operation.preprocess.Preprocessors.prettyPrint;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -63,7 +64,7 @@ class AnswerResultRestControllerV1Test {
         expectedAnswerResultDto.setId(1L);
         expectedAnswerResultDto.setScore(0D);
         expectedAnswerResultDto.setQuestionId(1L);
-        expectedAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
+        expectedAnswerResultDto.setAnswerVariantsId(List.of(1L));
         expectedAnswerResultDto.setTestResultId(1L);
 
         when(answerResultService
@@ -83,7 +84,7 @@ class AnswerResultRestControllerV1Test {
         expectedAnswerResultDto.setId(1L);
         expectedAnswerResultDto.setScore(0D);
         expectedAnswerResultDto.setQuestionId(1L);
-        expectedAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
+        expectedAnswerResultDto.setAnswerVariantsId(List.of(1L));
         expectedAnswerResultDto.setTestResultId(1L);
 
         List<AnswerResultDto> expectedAnswerResultDtoList = new ArrayList<>();
@@ -102,24 +103,36 @@ class AnswerResultRestControllerV1Test {
 
     @Test
     void addNewAnswerResult() throws Exception {
+        List<AnswerVariant> answerVariantList = new ArrayList<>();
+
+        AnswerVariant answerVariant = new AnswerVariant();
+        Question question = new Question();
+        TestResult testResult = new TestResult();
+
+        answerVariant.setId(1L);
+        question.setId(1L);
+        testResult.setId(1L);
+
+        answerVariantList.add(answerVariant);
+
         AnswerResultDto expectedAnswerResultDto = new AnswerResultDto();
         expectedAnswerResultDto.setId(1L);
         expectedAnswerResultDto.setScore(0D);
-        expectedAnswerResultDto.setQuestionId(null);
-        expectedAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
-        expectedAnswerResultDto.setTestResultId(null);
+        expectedAnswerResultDto.setQuestionId(1L);
+        expectedAnswerResultDto.setAnswerVariantsId(List.of(1L));
+        expectedAnswerResultDto.setTestResultId(1L);
 
         AnswerResult answerResult = new AnswerResult();
         answerResult.setScore(0D);
-        answerResult.setQuestion(null);
-        answerResult.setAnswerVariants(Collections.emptyList());
-        answerResult.setTestResult(null);
+        answerResult.setQuestion(question);
+        answerResult.setAnswerVariants(answerVariantList);
+        answerResult.setTestResult(testResult);
 
         AnswerResultDto inputAnswerResultDto = new AnswerResultDto();
         inputAnswerResultDto.setScore(0D);
-        inputAnswerResultDto.setQuestionId(null);
-        inputAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
-        inputAnswerResultDto.setTestResultId(null);
+        inputAnswerResultDto.setQuestionId(1L);
+        inputAnswerResultDto.setAnswerVariantsId(List.of(1L));
+        inputAnswerResultDto.setTestResultId(1L);
 
         when(answerResultService.
                 toAnswerResult(inputAnswerResultDto))
@@ -139,26 +152,38 @@ class AnswerResultRestControllerV1Test {
 
     @Test
     void updateAnswerResult() throws Exception {
+        List<AnswerVariant> answerVariantList = new ArrayList<>();
+
+        AnswerVariant answerVariant = new AnswerVariant();
+        Question question = new Question();
+        TestResult testResult = new TestResult();
+
+        answerVariant.setId(1L);
+        question.setId(1L);
+        testResult.setId(1L);
+
+        answerVariantList.add(answerVariant);
+
         AnswerResultDto expectedAnswerResultDto = new AnswerResultDto();
         expectedAnswerResultDto.setId(1L);
         expectedAnswerResultDto.setScore(0D);
-        expectedAnswerResultDto.setQuestionId(null);
-        expectedAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
-        expectedAnswerResultDto.setTestResultId(null);
+        expectedAnswerResultDto.setQuestionId(1L);
+        expectedAnswerResultDto.setAnswerVariantsId(List.of(1L));
+        expectedAnswerResultDto.setTestResultId(1L);
 
         AnswerResult answerResult = new AnswerResult();
         answerResult.setId(1L);
         answerResult.setScore(0D);
-        answerResult.setQuestion(null);
-        answerResult.setAnswerVariants(Collections.emptyList());
-        answerResult.setTestResult(null);
+        answerResult.setQuestion(question);
+        answerResult.setAnswerVariants(answerVariantList);
+        answerResult.setTestResult(testResult);
 
         AnswerResultDto inputAnswerResultDto = new AnswerResultDto();
         inputAnswerResultDto.setId(1L);
         inputAnswerResultDto.setScore(0D);
-        inputAnswerResultDto.setQuestionId(null);
-        inputAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
-        inputAnswerResultDto.setTestResultId(null);
+        inputAnswerResultDto.setQuestionId(1L);
+        inputAnswerResultDto.setAnswerVariantsId(List.of(1L));
+        inputAnswerResultDto.setTestResultId(1L);
 
         when(answerResultService.
                 toAnswerResult(inputAnswerResultDto))
@@ -188,16 +213,16 @@ class AnswerResultRestControllerV1Test {
         AnswerResultDto expectedAnswerResultDto = new AnswerResultDto();
         expectedAnswerResultDto.setId(1L);
         expectedAnswerResultDto.setScore(0D);
-        expectedAnswerResultDto.setQuestionId(null);
-        expectedAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
-        expectedAnswerResultDto.setTestResultId(null);
+        expectedAnswerResultDto.setQuestionId(1L);
+        expectedAnswerResultDto.setAnswerVariantsId(List.of(1L));
+        expectedAnswerResultDto.setTestResultId(1L);
 
         AnswerResultDto inputAnswerResultDto = new AnswerResultDto();
         inputAnswerResultDto.setId(1L);
         inputAnswerResultDto.setScore(0D);
-        inputAnswerResultDto.setQuestionId(null);
-        inputAnswerResultDto.setAnswerVariantsId(Collections.emptyList());
-        inputAnswerResultDto.setTestResultId(null);
+        inputAnswerResultDto.setQuestionId(1L);
+        inputAnswerResultDto.setAnswerVariantsId(List.of(1L));
+        inputAnswerResultDto.setTestResultId(1L);
 
         when(answerResultService
                 .setPoints(inputAnswerResultDto))
