@@ -1,6 +1,8 @@
 package com.ekimenko.spring.rest.SpringRESTtestingsystem.rest.question_rest;
 
 import com.ekimenko.spring.rest.SpringRESTtestingsystem.dto.question_dto.QuestionDto;
+import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.answer.AnswerResult;
+import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.answer.AnswerVariant;
 import com.ekimenko.spring.rest.SpringRESTtestingsystem.model.question.Question;
 import com.ekimenko.spring.rest.SpringRESTtestingsystem.service.question_service.QuestionService;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -22,14 +24,12 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.Mockito.when;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.documentationConfiguration;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.*;
-import static org.springframework.restdocs.operation.preprocess.Preprocessors.prettyPrint;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -65,9 +65,9 @@ class QuestionRestControllerV1Test {
         expectedQuestionDto.setPosition(1);
         expectedQuestionDto.setAllowedParticleAnswer(false);
         expectedQuestionDto.setScore(1D);
-        expectedQuestionDto.setAnswerResultsId(Collections.emptyList());
-        expectedQuestionDto.setTestId(null);
-        expectedQuestionDto.setAnswerVariantsId(Collections.emptyList());
+        expectedQuestionDto.setAnswerResultsId(List.of(1L));
+        expectedQuestionDto.setTestId(1L);
+        expectedQuestionDto.setAnswerVariantsId(List.of(1L));
 
         when(questionService
                 .getQuestionDtoById(1L))
@@ -88,9 +88,9 @@ class QuestionRestControllerV1Test {
         expectedQuestionDto.setPosition(1);
         expectedQuestionDto.setAllowedParticleAnswer(false);
         expectedQuestionDto.setScore(1D);
-        expectedQuestionDto.setAnswerResultsId(Collections.emptyList());
-        expectedQuestionDto.setTestId(null);
-        expectedQuestionDto.setAnswerVariantsId(Collections.emptyList());
+        expectedQuestionDto.setAnswerResultsId(List.of(1L));
+        expectedQuestionDto.setTestId(1L);
+        expectedQuestionDto.setAnswerVariantsId(List.of(1L));
 
         List<QuestionDto> expectedQuestionDtoList = new ArrayList<>();
         expectedQuestionDtoList.add(expectedQuestionDto);
@@ -108,33 +108,48 @@ class QuestionRestControllerV1Test {
 
     @Test
     void addNewQuestion() throws Exception {
+        List<AnswerResult> answerResultList = new ArrayList<>();
+        List<AnswerVariant> answerVariantList = new ArrayList<>();
+
+        com.ekimenko.spring.rest.SpringRESTtestingsystem.model.test.Test test =
+                new com.ekimenko.spring.rest.SpringRESTtestingsystem.model.test.Test();
+        AnswerResult answerResult = new AnswerResult();
+        AnswerVariant answerVariant = new AnswerVariant();
+
+        test.setId(1L);
+        answerResult.setId(1L);
+        answerVariant.setId(1L);
+
+        answerResultList.add(answerResult);
+        answerVariantList.add(answerVariant);
+
         QuestionDto expectedQuestionDto = new QuestionDto();
         expectedQuestionDto.setId(1L);
         expectedQuestionDto.setText("testText");
         expectedQuestionDto.setPosition(1);
         expectedQuestionDto.setAllowedParticleAnswer(false);
         expectedQuestionDto.setScore(1D);
-        expectedQuestionDto.setAnswerResultsId(Collections.emptyList());
-        expectedQuestionDto.setTestId(null);
-        expectedQuestionDto.setAnswerVariantsId(Collections.emptyList());
+        expectedQuestionDto.setAnswerResultsId(List.of(1L));
+        expectedQuestionDto.setTestId(1L);
+        expectedQuestionDto.setAnswerVariantsId(List.of(1L));
 
         Question question = new Question();
         question.setText("testText");
         question.setPosition(1);
         question.setAllowedParticleAnswer(false);
         question.setScore(1D);
-        question.setAnswerResults(Collections.emptyList());
-        question.setTest(null);
-        question.setAnswerVariants(Collections.emptyList());
+        question.setAnswerResults(answerResultList);
+        question.setTest(test);
+        question.setAnswerVariants(answerVariantList);
 
         QuestionDto inputQuestionDto = new QuestionDto();
         inputQuestionDto.setText("testText");
         inputQuestionDto.setPosition(1);
         inputQuestionDto.setAllowedParticleAnswer(false);
         inputQuestionDto.setScore(1D);
-        inputQuestionDto.setAnswerResultsId(Collections.emptyList());
-        inputQuestionDto.setTestId(null);
-        inputQuestionDto.setAnswerVariantsId(Collections.emptyList());
+        inputQuestionDto.setAnswerResultsId(List.of(1L));
+        inputQuestionDto.setTestId(1L);
+        inputQuestionDto.setAnswerVariantsId(List.of(1L));
 
         when(questionService.
                 toQuestion(inputQuestionDto))
@@ -154,15 +169,30 @@ class QuestionRestControllerV1Test {
 
     @Test
     void updateQuestion() throws Exception {
+        List<AnswerResult> answerResultList = new ArrayList<>();
+        List<AnswerVariant> answerVariantList = new ArrayList<>();
+
+        com.ekimenko.spring.rest.SpringRESTtestingsystem.model.test.Test test =
+                new com.ekimenko.spring.rest.SpringRESTtestingsystem.model.test.Test();
+        AnswerResult answerResult = new AnswerResult();
+        AnswerVariant answerVariant = new AnswerVariant();
+
+        test.setId(1L);
+        answerResult.setId(1L);
+        answerVariant.setId(1L);
+
+        answerResultList.add(answerResult);
+        answerVariantList.add(answerVariant);
+
         QuestionDto expectedQuestionDto = new QuestionDto();
         expectedQuestionDto.setId(1L);
         expectedQuestionDto.setText("testText");
         expectedQuestionDto.setPosition(1);
         expectedQuestionDto.setAllowedParticleAnswer(false);
         expectedQuestionDto.setScore(1D);
-        expectedQuestionDto.setAnswerResultsId(Collections.emptyList());
-        expectedQuestionDto.setTestId(null);
-        expectedQuestionDto.setAnswerVariantsId(Collections.emptyList());
+        expectedQuestionDto.setAnswerResultsId(List.of(1L));
+        expectedQuestionDto.setTestId(1L);
+        expectedQuestionDto.setAnswerVariantsId(List.of(1L));
 
         Question question = new Question();
         question.setId(1L);
@@ -170,19 +200,19 @@ class QuestionRestControllerV1Test {
         question.setPosition(1);
         question.setAllowedParticleAnswer(false);
         question.setScore(1D);
-        question.setAnswerResults(Collections.emptyList());
-        question.setTest(null);
-        question.setAnswerVariants(Collections.emptyList());
+        question.setAnswerResults(answerResultList);
+        question.setTest(test);
+        question.setAnswerVariants(answerVariantList);
 
         QuestionDto inputQuestionDto = new QuestionDto();
-        inputQuestionDto.setTestId(1L);
+        inputQuestionDto.setId(1L);
         inputQuestionDto.setText("testText");
         inputQuestionDto.setPosition(1);
         inputQuestionDto.setAllowedParticleAnswer(false);
         inputQuestionDto.setScore(1D);
-        inputQuestionDto.setAnswerResultsId(Collections.emptyList());
-        inputQuestionDto.setTestId(null);
-        inputQuestionDto.setAnswerVariantsId(Collections.emptyList());
+        inputQuestionDto.setAnswerResultsId(List.of(1L));
+        inputQuestionDto.setTestId(1L);
+        inputQuestionDto.setAnswerVariantsId(List.of(1L));
 
         when(questionService.
                 toQuestion(inputQuestionDto))
